# models/user_basic.go
@@ -2,7 +2,6 @@ package models
 
 import (
 	"GinChat/utils"
-	"fmt"
 	"time"
 
 	"gorm.io/gorm"
@@ -10,17 +9,17 @@ import (
 
 type UserBasic struct {
 	gorm.Model
-	Name          string
-	PassWord      string
-	Phone         string
-	Email         string
-	Identity      string
-	ClientIp      string
-	LoginTime     time.Time
-	HeartbeatTime time.Time
-	LoginOutTime  time.Time
-	IsLoginOut    bool
-	DeviceInfo    string
+	Name          string    `json:"name"`
+	PassWord      string    `json:"passWord"`
+	Phone         string    `json:"phone"`
+	Email         string    `json:"email"`
+	Identity      string    `json:"identity"`
+	ClientIp      string    `json:"clientIp"`
+	LoginTime     time.Time `json:"loginTime"`
+	HeartbeatTime time.Time `json:"heartbeatTime"`
+	LoginOutTime  time.Time `json:"loginOutTime"`
+	IsLoginOut    bool      `json:"isLoginOut"`
+	DeviceInfo    string    `json:"deviceInfo"`
 }
 
 // TableName 返回数据库名称的方法 gorm生成数据表的名称
@@ -33,8 +32,23 @@ func GetAllUserList() []*UserBasic {
 	userList := make([]*UserBasic, 10)
 	db := utils.GetDB()
 	db.Find(&userList)
-	for _, value := range userList {
-		fmt.Println(value)
-	}
 	return userList
+}
+
+// CreateUser (函数) 创建用户
+func CreateUser(user *UserBasic) *gorm.DB {
+	db := utils.GetDB()
+	return db.Create(&user)
+}
+
+// DeleteUser (函数) 删除用户
+func DeleteUser(user *UserBasic) *gorm.DB {
+	db := utils.GetDB()
+	return db.Delete(&user)
+}
+
+// UpdateUser (函数) 修改用户
+func UpdateUser(user *UserBasic) *gorm.DB {
+	db := utils.GetDB()
+	return db.Model(&user).Updates(UserBasic{Name: user.Name, PassWord: user.PassWord, Phone: user.Phone})
 }
